force-app/main/default/objects/Donation_Import__c/Donation_Import__c.object-meta.xml
<CustomObject>
    <description>Staging object for importing donations from Stripe before creating Opportunity records</description>
    <label>Donation Import</label>
    <nameField>
        <displayFormat>DI-{00000}</displayFormat>
        <label>Import Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>