force-app/main/default/objects/Donation_Import__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>PROBLEM: This field is required but the Stripe import integration is not mapping/populating it, causing records to be dropped during import.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Donation Imports</relationshipLabel>
    <relationshipName>Donation_Imports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>