force-app/main/default/objects/Donation_Import__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <formula>TEXT(Campaign__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>