force-app/main/default/objects/Donation_Import__c/fields/Stripe_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Transaction_ID__c</fullName>
    <label>Stripe Transaction ID</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
</CustomField>