force-app/main/default/objects/Donation_Import__c/validationRules/Campaign_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>Campaign__c &lt;&gt; NULL</errorConditionFormula>
    <errorMessage>Campaign is required</errorMessage>
</ValidationRule>